pridavanie nehnutelnosti v modely